<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.FormLogin">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/transparent"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusableInTouchMode="false"
        android:text="@string/login"
        android:fontFamily="@font/roboto_boldcondensed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLogin"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capt_login"
        android:fontFamily="@font/roboto_condensed"

        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:paddingBottom="20dp"
        android:fontFamily="@font/roboto_condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_condensed"
        android:paddingBottom="20dp"
        android:text="@string/forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="450dp"
        android:scaleType="fitXY"
        android:src="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <Button
            android:id="@+id/btnRegLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_top"
            android:fontFamily="@font/roboto_boldcondensed"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/but_switch_reg"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:iconTint="@color/gray" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="LOGIN"
            android:fontFamily="@font/roboto_boldcondensed"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        card_view:cardElevation="0.9dp"
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                card_view:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="12dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/roboto_condensed"
                    android:paddingEnd="12dp"
                    android:singleLine="false"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="24dp"
                app:passwordToggleEnabled="true"
                card_view:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="Password"
                    android:fontFamily="@font/roboto_condensed"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="135dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/roboto_boldcondensed"
        android:text="Login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />


</androidx.constraintlayout.widget.ConstraintLayout>